# novomatic_task

./: CMakeLists.txt  README.md
Task_1/: CMakeLists.txt  main.cpp
Task_2/: CMakeLists.txt  main.cpp
Task_3/: CMakeLists.txt  main.cpp  trim.cpp
google_test/: CMakeLists.txt  Task3_testing.cpp
